Fixed the navBar issue on tablet screen and content section placement for the mobile devices.

--- a/src/components/ICO/SeventhSlide/MiddleData/middleData.css
+++ b/src/components/ICO/SeventhSlide/MiddleData/middleData.css
@@ -7,6 +7,13 @@
     padding: 30px 50px;
     margin: 0% 5% 0% 5%;
 }
+@media screen and (min-width: 650px) {
+    .mobile-view {
+      display: flex !important;
+    }
+  }
+
+
 .bg_color_white{
     background-color: #fff;
 }
